--- a/proposal.qmd
+++ b/proposal.qmd
@@ -24,12 +24,15 @@ of the song.
   - The first two are very similar. They both include the following variables: album_name, ep, album_release, track_number, track_name, artist,
 featuring, bonus_track, promotional_release, single_release, track_release, danceability, energy, key, loudness, mode, speechiness, acousticness,
 instrumentalness, liveness, valence, tempo, time_signature, duration_ms, explicit, key_name, mode_name, key_mode, lyrics. 
-  -The only difference from these two ( taylor_album_songs.csv and taylor_all_songs.csv) is that the latter includes all of her songs, not just songs 
+  - The only difference from these two ( taylor_album_songs.csv and taylor_all_songs.csv) is that the latter includes all of her songs, not just songs 
 that came off of her official studio albums. Specifically, taylor_album_songs excludes singles released separately from an album, and also excludes the 
 original releases of albums that now have a Taylor-owned alternative in support of artists wanting to own their own music. 
 - The taylor_albums.csv includes the variables: album_name, ep, album_release, metacritic_score, user_score. 
   - We do not have any current plans to use this portion of data set. 
 
+- We chose this data set because we love Taylor Swift and Travis Kelce! But more seriously, when we looked at the data, we noticed it there was a wide
+variety of types of variables and very rich data. We saw it there was enough data to complete the project and think we can create something in line
+with our intersts and also some interesting findings!
 
 ## Questions
 
