--- a/proposal.qmd
+++ b/proposal.qmd
@@ -47,7 +47,7 @@ The two questions you want to answer.
 
 A plan for answering each of the questions including the variables involved, variables to be created (if any), external data to be merged in (if any).
 
--   For the first question, we plan on comparing different numerical characteristics of the singles, such as danceability and energy, from the single releases, to the average of these values from all of the songs on that album as a whole. There are many different visualizations from the many different variables as part of this dataset. The exact variables that will be used are
+-   For the first question, we plan on comparing different numerical characteristics of the singles, such as danceability and energy, from the single releases, to the average of these values from all of the songs on that album as a whole. There are many different visualizations from the many different variables as part of this dataset. One initial idea we have is to use a geom_bar to compare the values by song, and highlighting any difference with the songs released as singles. The exact variables that will be used are
 
     -   Variable: single_release Type: Double Description: date of single release
     -   Variable: danceability Type: Double Description: Spotify danceability score. A value of 0.0 is least danceable and 1.0 is most danceable.
@@ -56,7 +56,7 @@ A plan for answering each of the questions including the variables involved, var
     -   Variable: album_release Type: Double Description: Album release date
     -   Variable: track_number Type: Integer Description: Track Number
 
--   For the second question, we again could compare how her songs have changed over time by looking at the different numerical characteristics of the songs to see how her style has changed. We could look at specifically acoustic songs to see if she has been making more or less acoustic songs over time. We can look at the metacritic scores of the albums over time to see if she has been scored higher the longer she has been popular. We also might be able to visualize what individual words she has used more or less over time, such as the words “love”, “hate” or anything in between.
+-   For the second question, we again could compare how her songs have changed over time by looking at the different numerical characteristics of the songs to see how her style has changed. We could look at specifically acoustic songs to see if she has been making more or less acoustic songs over time. We can look at the metacritic scores of the albums over time to see if she has been scored higher the longer she has been popular. We also might be able to visualize what individual words she has used more or less over time, such as the words “love”, “hate” or anything in between. One initial idea we have in terms of visualizing this is to use geom_line with time on the x axis and the score variable (ex. acousticness) on the y-axis to visualize the change overtime. The exact variables that will be used are
 
     -   Variable: album_release Type: Double Description: Album release date
     -   Variable: track_number Type: Integer Description: Track Number
