--- a/presentation.qmd
+++ b/presentation.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Project title"
 subtitle: "STA/ISS 313 - Spring 2024 - Project 1"
-author: "Team Name"
+author: "Team Robots 🤖"
 title-slide-attributes:
   data-background-image: images/watercolour_sys02_img34_teacup-ocean.jpg
   data-background-size: stretch
