--- a/plot1.qmd
+++ b/plot1.qmd
@@ -34,11 +34,6 @@ taylor_all_songs <- taylor_all_songs |>
 
 print(taylor_all_songs)
 
-taylor_albums_dance <- taylor_all_songs |>
-  drop_na(danceability) |>
-  group_by(album_name) |>
-  summarise(album_dance = mean(danceability)) 
-
 taylor_albums_energy <- taylor_all_songs |>
   drop_na(energy) |>
   group_by(album_name) |>
@@ -51,8 +46,7 @@ taylor_singles_energy <- taylor_all_songs %>%
 
 print(taylor_singles_energy)
 
-taylor_albums_data_int <- merge(taylor_albums_dance, taylor_albums_energy)
-taylor_albums_data <- merge(taylor_albums_data_int, taylor_singles_energy)
+taylor_albums_data <- merge(taylor_albums_energy, taylor_singles_energy)
 taylor_albums_data
 
 
@@ -63,12 +57,11 @@ taylor_albums_data
 #| label: create-plot
 #| message: false
 
-ggplot(taylor_albums_data, aes(x = album_name, y = album_energy, fill = album_name)) +
+ggplot(taylor_albums_data, aes(x = album_name, y = singles_energy, fill = album_name)) +
   geom_bar(stat = "identity") +
   scale_fill_manual(values = c("#7B96AF", "#ACA38D", "#BD9365", "#5F4A30", 
                                "#4D4D4D", "#DEA9C9", "#A26A5B", "#982F47", 
-                               "#982839", "#0A0A0A", "#704073", "#4497BA", 
-                               "#B5283A")) +
+                               "#0A0A0A", "#704073", "#4497BA")) +
   #scale_y_continuous(breaks = seq(0, 1.0, 5), labels = seq(0, 1.0, 5)) + 
   theme_bw() +
   theme(axis.text.x = element_blank()) +
@@ -84,27 +77,20 @@ ggplot(taylor_albums_data, aes(x = album_name, y = album_energy, fill = album_na
 #| label: create-plot2
 #| message: false
 
-combined_data <- taylor_albums_data %>%
-  left_join(taylor_all_songs, by = c("album_name" = "album_name")) %>%
-  mutate(is_single = !(is.na(single_release)))
-
-# Create a new column 'bar_type' to differentiate between all songs and singles
-combined_data <- combined_data %>%
-  mutate(bar_type = ifelse(is_single, "Single", "All Songs"))
-
-# Plot the bar chart
-ggplot(combined_data, aes(x = album_name, y = album_energy, fill = bar_type)) +
-  geom_bar(stat = "identity", position = "dodge") +
-  scale_fill_manual(values = c("#7B96AF", "#BD9365")) +  # Adjust colors as needed
+ggplot(taylor_albums_data, aes(x = album_name)) +
+  geom_bar(aes(y = album_energy, fill = "Album Energy"), stat = "identity", position = "dodge", width = 0.7) +
+  geom_bar(aes(y = singles_energy, fill = "Single Energy"), stat = "identity", position = "dodge", width = 0.7) +
+  scale_fill_manual(values = c("#7B96AF", "#ACA38D", "#BD9365", "#5F4A30", 
+                               "#4D4D4D", "#DEA9C9", "#A26A5B", "#982F47", 
+                               "#0A0A0A", "#704073", "#4497BA")) +
   theme_bw() +
   theme(axis.text.x = element_blank()) +
   labs(
-    title = "Taylor Swift Song Energy of Albums",
-    subtitle = "",
+    title = "Energy Values of Taylor Swift Albums",
     x = "Albums",
     y = "Energy",
-    fill = "Bar Type",
-    caption = "Source: Tidy Tuesday"
+    fill = "Energy Type",
+    caption = "Source: Your Source"
   )
 ```
 
