--- a/plot 2.qmd
+++ b/plot 2.qmd
@@ -1,8 +1,57 @@
-Hey girls, getting starting on plot 2 
-
-up ur butt 
+---
+title: "Taylor Swift (Soon-to-be Kelce)"
+subtitle: "Plot2"
+format: html
+editor: visual
+---
 
 ```{r}
+#| label: load-pkgs
+#| message: false
+
+library(tidyverse)
+```
+
+```{r}
+#| label: load-data
+#| message: false
+
+taylor_album_songs <- readr::read_csv('data/taylor_album_songs.csv', show_col_types = FALSE)
+taylor_all_songs <- readr::read_csv('data/taylor_all_songs.csv', show_col_types = FALSE)
+taylor_albums <- readr::read_csv('data/taylor_albums.csv', show_col_types = FALSE)
+```
+
+```{r}
+#| label: create_dataframe_for_plot2
+
+taylor_albums_stats <- taylor_all_songs |>
+  drop_na(energy, danceability, speechiness, acousticness, liveness, valence) |>
+  group_by(album_name) |>
+  summarise(
+    album_energy = mean(energy),
+    album_danceability = mean(danceability),
+    album_speechiness = mean(speechiness),
+    album_liveness = mean(liveness),
+    album_valence = mean(valence)
+  )
+
+taylor_albums_plot2 <- merge(taylor_albums, taylor_albums_stats)
 
 ```
 
+```{r}
+
+ggplot(taylor_albums_plot2, aes(x = album_release)) +
+  geom_point(aes(y = album_energy), color = "red") +
+  geom_point(aes(y = album_danceability), color = "blue") +
+  geom_point(aes(y = album_speechiness), color = "green") +
+  geom_point(aes(y = album_liveness), color = "orange") +
+  geom_point(aes(y = album_valence), color = "purple") +
+  geom_line(aes(y = album_energy), color = "red") +
+  geom_line(aes(y = album_danceability), color = "blue") +
+  geom_line(aes(y = album_speechiness), color = "green") +
+  geom_line(aes(y = album_liveness), color = "orange") +
+  geom_line(aes(y = album_valence), color = "purple")
+  
+
+```
