--- a/plot 2.qmd
+++ b/plot 2.qmd
@@ -39,6 +39,7 @@ taylor_albums_plot2 <- merge(taylor_albums, taylor_albums_stats)
 ```
 
 ```{r}
+#| experimental_plot
 
 ggplot(taylor_albums_plot2, aes(x = album_release)) +
   geom_point(aes(y = album_energy), color = "red") +
@@ -53,4 +54,32 @@ ggplot(taylor_albums_plot2, aes(x = album_release)) +
   geom_smooth(aes(y = album_danceability), method = "lm", se = FALSE, color = "pink") +
   geom_smooth(aes(y = album_speechiness), method = "lm", se = FALSE, color = "pink") +
   geom_smooth(aes(y = album_valence), method = "lm", se = FALSE, color = "pink")
+```
+
+```{r fig.height = 8, fig.width = 11}
+#| label: highlight_energy_plot
+
+ggplot(taylor_albums_plot2, aes(x = album_release)) +
+  geom_point(aes(y = album_danceability), color = "gray") +
+  geom_point(aes(y = album_speechiness), color = "gray") +
+  geom_point(aes(y = album_valence), color = "gray") +
+  geom_line(aes(y = album_danceability), color = "gray") +
+  geom_line(aes(y = album_speechiness), color = "gray") +
+  geom_line(aes(y = album_valence), color = "gray") +
+  geom_point(aes(y = album_energy), color = "red", size = 3) +
+  geom_line(aes(y = album_energy), color = "red", size = 1.4) +
+  geom_smooth(aes(y = album_energy), method = "lm", se = FALSE, color = "pink", alpha = 0.5) +
+  geom_text(aes(y = album_energy, label = album_name), color = "blue", size = 3, vjust = -1) +
+  scale_y_continuous(breaks = seq(0.0, 1.0, by = 0.1), limits = c(0, 1)) +
+  scale_x_date(date_breaks = "1 year", date_labels = "%Y") +
+  labs(
+    title = "Change over time of energy in Taylor Swift albums",
+    x = "Album Release Date"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.title.y = element_blank(),
+    panel.grid.minor = element_blank(),
+  )
+
 ```
