--- a/plot1.qmd
+++ b/plot1.qmd
@@ -65,7 +65,7 @@ taylor_albums_data
 ```
 
 ```{r}
-#| label: create-plot
+#| label: create-plot1
 #| message: false
 
 # ggplot(taylor_albums_data, aes(x = album_name, y = singles_energy, fill = album_name)) +
@@ -84,9 +84,11 @@ taylor_albums_data
 #        caption = "Source: Tidy Tuesday")
 
 taylor_albums_data <- taylor_albums_data |>
-  mutate(album_name = factor(album_name, levels = c("Midnights",  "evermore", "folklore", "Lover",
-                                                    "reputation", "1989", "Red", "Speak Now",
-                                                    "Fearless (Taylor's Version)", "Fearless", "Taylor Swift")))
+  mutate(album_name = factor(album_name, levels = c("Midnights",  "evermore", "folklore",
+                                                    "Lover", "reputation", "1989", 
+                                                    "Red", "Speak Now", 
+                                                    "Fearless (Taylor's Version)", 
+                                                    "Fearless", "Taylor Swift")))
 
 # ggplot(taylor_albums_data, aes(x = energy, y = album_name, fill = song_type)) +
 #   geom_col(position = "dodge") +
@@ -123,19 +125,21 @@ ggplot(taylor_albums_data, aes(x = album_name, y = energy, fill = album_name)) +
 #| label: create-plot2
 #| message: false
 
-ggplot(taylor_albums_data, aes(x = album_name, y = energy, fill = album_name)) +
-  geom_point() +
-  scale_fill_manual(values = c("#7B96AF", "#ACA38D", "#BD9365", "#5F4A30", 
-                               "#4D4D4D", "#DEA9C9", "#A26A5B", "#982F47", 
-                               "#0A0A0A", "#704073", "#4497BA")) +
+taylor_songs_tempo <- taylor_all_songs |>
+  drop_na(tempo) |>
+  filter(is_single == TRUE)
+  
+
+ggplot(taylor_albums_data, aes(x = song_type, y = energy, color = song_type)) +
+  geom_boxplot(show.legend = FALSE) +
+  scale_color_manual(values = c("#4D4D4D", "#DEA9C9")) +
   theme_bw() +
-  theme(axis.text.x = element_blank()) +
   labs(
-    title = "Energy Values of Taylor Swift Albums",
-    x = "Albums",
-    y = "Energy",
-    fill = "Energy Type",
-    caption = "Source: Your Source"
+    title = "Tempo Distribution of Taylor Swift Songs",
+    subtitle = "Album only songs versus single releases",
+    x = "Release Type",
+    y = "Tempo",
+    caption = "Source: Tidy Tuesday Data"
   )
 ```
 
