--- a/plot 2.qmd
+++ b/plot 2.qmd
@@ -40,7 +40,7 @@ taylor_albums_plot2a <- merge(taylor_albums, taylor_albums_stats)
 ```
 
 ```{r}
-#| experimental_plot
+#| label: experimental_plot
 
 ggplot(taylor_albums_plot2a, aes(x = album_release)) +
   geom_point(aes(y = album_energy), color = "red") +
@@ -67,12 +67,15 @@ ggplot(taylor_albums_plot2a, aes(x = album_release)) +
   #geom_line(aes(y = album_danceability), color = "gray", size = 1) +
   #geom_line(aes(y = album_speechiness), color = "gray", size = 1) +
   #geom_line(aes(y = album_valence), color = "gray", size = 1) +
-  geom_point(aes(y = album_energy), color = "#4D4D4D", size = 5, shape = 18) +
   geom_line(aes(y = album_energy), color = "#4D4D4D", size = 2) +
-  geom_smooth(aes(y = album_energy), method = "lm", se = FALSE, color = "#DEA9C9") +
+  geom_smooth(aes(y = album_energy), method = "lm", se = FALSE, color = "#DEA9C9", size =2) +
+  geom_point(aes(y = album_energy, color = album_name), size = 7, shape = 18) +
   geom_label_repel(aes(y = album_energy, label = album_name), color = "#4D4D4D", size = 3) +
   scale_y_continuous(breaks = seq(0.0, 1.0, by = 0.1), limits = c(0, 1)) +
   scale_x_date(date_breaks = "1 year", date_labels = "%Y") +
+  scale_color_manual(values = c("#A26A5B", "#ACA38D", "#4D4D4D", "#DEA9C9", 
+                               "#0A0A0A", "#7B96AF", "#982F47", "#704073", 
+                               "#5F4A30", "#BD9365", "#4497BA", "green", "green")) +
   labs(
     title = "Energy of Taylor Swift albums over time",
     x = "Album Release Date"
@@ -81,6 +84,7 @@ ggplot(taylor_albums_plot2a, aes(x = album_release)) +
   theme(
     axis.title.y = element_blank(),
     panel.grid.minor = element_blank(),
+    legend.position = "none"
   )
 
 ```
