--- a/plot 2.qmd
+++ b/plot 2.qmd
@@ -26,16 +26,24 @@ taylor_albums <- readr::read_csv('data/taylor_albums.csv', show_col_types = FALS
 #| label: create_dataframe_for_plot2a
 
 taylor_albums_stats <- taylor_all_songs |>
-  drop_na(energy, danceability, speechiness, acousticness, valence) |>
+  drop_na(energy, valence) |>
   group_by(album_name) |>
   summarise(
     album_energy = mean(energy),
-    album_danceability = mean(danceability),
-    album_speechiness = mean(speechiness),,
     album_valence = mean(valence)
   )
 
 taylor_albums_plot2a <- merge(taylor_albums, taylor_albums_stats)
+
+taylor_albums_plot2a <- taylor_albums_plot2a |>
+  pivot_longer(
+    cols = c("album_energy", "album_valence"),
+    names_to = "song_attribute",
+    values_to = "attribute_value"
+  ) |>
+  mutate(
+    song_attribute = fct_recode(song_attribute, "energy" = "album_energy", "valence" = "album_valence")
+  )
 
 ```
 
@@ -67,10 +75,10 @@ ggplot(taylor_albums_plot2a, aes(x = album_release)) +
   #geom_line(aes(y = album_danceability), color = "gray", size = 1) +
   #geom_line(aes(y = album_speechiness), color = "gray", size = 1) +
   #geom_line(aes(y = album_valence), color = "gray", size = 1) +
-  geom_line(aes(y = album_energy), color = "#4D4D4D", size = 2) +
-  geom_smooth(aes(y = album_energy), method = "lm", se = FALSE, color = "#DEA9C9", size =2) +
-  geom_point(aes(y = album_energy, color = album_name), size = 7, shape = 18) +
-  geom_label_repel(aes(y = album_energy, label = album_name), color = "#4D4D4D", size = 3) +
+  geom_line(aes(y = attribute_value), color = "#4D4D4D", size = 2) +
+  geom_smooth(aes(y = attribute_value), method = "lm", se = FALSE, color = "#DEA9C9", size =2) +
+  geom_point(aes(y = attribute_value, color = album_name), size = 7, shape = 18) +
+  geom_label_repel(aes(y = attribute_value, label = album_name), color = "#4D4D4D", size = 3) +
   scale_y_continuous(breaks = seq(0.0, 1.0, by = 0.1), limits = c(0, 1)) +
   scale_x_date(date_breaks = "1 year", date_labels = "%Y") +
   scale_color_manual(values = c("#A26A5B", "#ACA38D", "#4D4D4D", "#DEA9C9", 
@@ -84,8 +92,10 @@ ggplot(taylor_albums_plot2a, aes(x = album_release)) +
   theme(
     axis.title.y = element_blank(),
     panel.grid.minor = element_blank(),
-    legend.position = "none"
-  )
+    legend.position = "none",
+    plot.title = element_text(vjust = -7, size = 20, face = "bold")
+  ) +
+  facet_wrap(~song_attribute, ncol = 1)
 
 ```
 
