--- a/plot 2.qmd
+++ b/plot 2.qmd
@@ -42,7 +42,13 @@ taylor_albums_plot2a <- taylor_albums_plot2a |>
     values_to = "attribute_value"
   ) |>
   mutate(
-    song_attribute = fct_recode(song_attribute, "energy" = "album_energy", "valence" = "album_valence")
+    song_attribute = fct_recode(song_attribute, "energy" = "album_energy", "valence" = "album_valence"),
+    album_name = factor(album_name, levels = c("Midnights",  "evermore", "folklore",
+                                                    "Lover", "reputation", "1989", 
+                                                    "Red", "Speak Now", 
+                                                    "Fearless (Taylor's Version)", 
+                                                    "Fearless", "Taylor Swift", "The Taylor Swift Holiday Collection",
+                                                    "Red (Taylor's Version)"))
   )
 
 ```
@@ -69,33 +75,34 @@ ggplot(taylor_albums_plot2a, aes(x = album_release)) +
 #| label: highlight_energy_plot
 
 ggplot(taylor_albums_plot2a, aes(x = album_release)) +
-  #geom_point(aes(y = album_danceability), color = "gray", shape = 18) +
-  #geom_point(aes(y = album_speechiness), color = "gray", shape = 18) +
-  #geom_point(aes(y = album_valence), color = "gray", shape = 18) +
-  #geom_line(aes(y = album_danceability), color = "gray", size = 1) +
-  #geom_line(aes(y = album_speechiness), color = "gray", size = 1) +
-  #geom_line(aes(y = album_valence), color = "gray", size = 1) +
   geom_line(aes(y = attribute_value), color = "#4D4D4D", size = 2) +
-  geom_smooth(aes(y = attribute_value), method = "lm", se = FALSE, color = "#DEA9C9", size =2) +
   geom_point(aes(y = attribute_value, color = album_name), size = 7, shape = 18) +
-  geom_label_repel(aes(y = attribute_value, label = album_name), color = "#4D4D4D", size = 3) +
+  geom_smooth(aes(y = attribute_value), method = "lm", se = FALSE, color = "#ff00ff60", size =2, linetype = "dashed") +
+  geom_label_repel(aes(y = attribute_value, label = album_name, fill = album_name), color = "white", size = 3, 
+                   nudge_y = 0.1, nudge_x = 100) +
   scale_y_continuous(breaks = seq(0.0, 1.0, by = 0.1), limits = c(0, 1)) +
   scale_x_date(date_breaks = "1 year", date_labels = "%Y") +
   scale_color_manual(values = c("#A26A5B", "#ACA38D", "#4D4D4D", "#DEA9C9", 
                                "#0A0A0A", "#7B96AF", "#982F47", "#704073", 
-                               "#5F4A30", "#BD9365", "#4497BA", "green", "green")) +
+                               "#5F4A30", "#BD9365", "#4497BA", "#BA372E", "#903F31")) +
+  scale_fill_manual(values = c("#A26A5B", "#ACA38D", "#4D4D4D", "#DEA9C9", 
+                               "#0A0A0A", "#7B96AF", "#982F47", "#704073", 
+                               "#5F4A30", "#BD9365", "#4497BA", "#BA372E", "#903F31")
+  ) +
   labs(
-    title = "Energy of Taylor Swift albums over time",
+    title = "Taylor Swift album attributes over time",
     x = "Album Release Date"
   ) +
-  theme_minimal() +
   theme(
     axis.title.y = element_blank(),
     panel.grid.minor = element_blank(),
     legend.position = "none",
-    plot.title = element_text(vjust = -7, size = 20, face = "bold")
+    plot.title = element_text(size = 15, face = "bold", hjust = 0.5),
+    axis.title.x = element_text(vjust = -1, size = 12),
+    strip.text = element_text(size = 12)
   ) +
-  facet_wrap(~song_attribute, ncol = 1)
+  facet_wrap(~song_attribute, ncol = 1, labeller = labeller(song_attribute = c(energy = "Attribute: Energy", 
+                                                                               valence = "Attribute: Valence")))
 
 ```
 
